@@ -1,3 +1,11 @@
+2015-12-17  Dan Espen  <despen@verizon.net>
+
+	* index.php: Remove "Development is active".
+
+	* download/index.php: Remove reference to snapshots, they haven't been built for ages.
+ 	Change label from "Latest CVS sources via ftp:"
+	to "Latest released CVS sources via ftp:".
+
 2014-04-09  Thomas Adam <thomas@fvwm.org>
 	* documentation/dev_cvs.php:
 	Fix a nasty typo, rendering the <php block useless
